Centering and wrapping fixes
Fix long text not wrapping, and footer centering.

Credits:
For footer: https://github.com/panr/hugo-theme-terminal/pull/456
For pagination: https://github.com/panr/hugo-theme-terminal/issues/464#issuecomment-1537075792

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -23,6 +23,7 @@ body {
   font-variant-ligatures: contextual;
   -webkit-overflow-scrolling: touch;
   -webkit-text-size-adjust: 100%;
+  word-wrap: break-word;
 
   @media ($phone) {
     font-size: 1rem;
